ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rambo-ingress

spec:
  rules:
  - host: rambo2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rambo-2
            port:
              number: 80
 
  - host: rambo.local
    http:
      paths:
      - path: /rambo/1
        pathType: Prefix
        backend:
          service:
            name: rambo-1
            port:
              number: 80
      - path: /year/1982
        pathType: Prefix
        backend:
          service:
            name: rambo-1
            port:
              number: 80
      - path: /rambo/2
        pathType: Prefix
        backend:
          service:
            name: rambo-2
            port:
              number: 80
      - path: /rambo/3
        pathType: Prefix
        backend:
          service:
            name: rambo-3
            port:
              number: 80
